# command-line-rust

./: .gitignore  README.md  ideas.txt  test.sh
01_echor/: Cargo.toml  mk-outs.sh
01_hello/: 01-hello.txt  Cargo.toml
02_catr/: Cargo.toml  mk-outs.sh
02_echor/: 02-echor.txt  Cargo.toml  mk-outs.sh
03_catr/: .gitignore  03-catr.txt  Cargo.toml  mk-outs.sh
03_headr/: Cargo.toml  mk-outs.sh
04_headr/: .gitignore  04-headr.txt  Cargo.toml  mk-outs.sh
04_headr/src/: lib.rs  main.rs
04_headr/tests/: cli.rs
04_headr/tests/expected/: all.c1.out  all.c2.out  all.c4.out  all.n2.out  all.n4.out  all.out  one.txt.c4.out  three.txt.c4.out  two.txt.c2.out  two.txt.c4.out
04_tailr/: Cargo.toml  mk-outs.sh  out
04_tailr/src/: lib.rs  main.rs
04_tailr/tests/: cli.rs
04_tailr/tests/expected/: 10.txt.n4.out  all.c+12.out  all.c+8.out  all.c12.out  all.c8.out  all.n1.out  one.txt.c8.out  three.txt.c+2.out  three.txt.out
04_tailr/tests/inputs/: 10.txt.c8.out  10.txt.n2.out  all.c1.out  all.c12.out  all.c2.out  all.c3.out  all.c8.out  all.n1.out  all.n2.out  all.n2.q.out  all.n3.out  all.out  one.txt.c4.out  one.txt.out  two.txt.c3.out
04_wcr/: Cargo.toml
05_lsr/: Cargo.toml  mk-outs.sh
05_uniqr/: Cargo.toml  mk-outs.sh
05_wcr/: 05-wcr.txt  Cargo.toml  mk-outs.sh
06_cutr/: Cargo.toml
06_findr/: Cargo.toml  cp-tests.sh  mk-outs.sh
06_uniqr/: 06-uniqr.txt  Cargo.toml
06_wcr/: Cargo.toml  mk-outs.sh
07_cutr/: Cargo.toml  mk-outs.sh  test
07_findr/: Cargo.toml  README.md  cp-tests.sh
07_findr/src/: lib.rs  main.rs
07_findr/tests/: cli.rs
07_findr/tests/expected/: name_a.txt  name_a.txt.windows  name_csv.txt  name_csv_mp3.txt  name_csv_mp3.txt.windows  name_txt_path_a_d.txt.windows  path1.txt  path1.txt.windows  path_a_b.txt  path_a_b_d.txt  path_d.txt  path_g.txt.windows  type_d.txt  type_d_name_a.txt  type_d_name_a.txt.windows  type_d_path_a.txt  type_d_path_a.txt.windows  type_d_path_a_b.txt  type_d_path_a_b.txt.windows  type_d_path_a_b_d.txt  type_d_path_d.txt.windows  type_f.txt  type_f.txt.windows  type_f_path_a_b.txt.windows  type_f_path_a_b_d.txt  type_f_path_a_b_d.txt.windows  type_f_path_d.txt.windows  unreadable_dir.txt
07_uniqr/: mk-outs.sh
08_cowsayr/: Cargo.toml
08_cowsayr/src/: main.rs
08_cutr/: Cargo.toml  mk-outs.sh
08_cutr/src/: lib.rs  main.rs
08_cutr/tests/: cli.rs
08_cutr/tests/expected/: books.c1,1.out  movies1.csv.f1-2.dcomma.out  movies1.csv.f2-3.dcomma.out  movies1.tsv.f1-2.out
08_cutr/tests/inputs/: 1.csv.b1-3.out  1.csv.f1-2.dcomma.out  1.csv.f1-3.dcomma.out  1.csv.f1.dcomma.out  1.csv.f2-3.dcomma.out  1.csv.f3.dcomma.out  1.tsv.f1-2.out  1.tsv.f1-3.out  1.tsv.f2-3.out  1.tsv.f2.out  books.f1-3.out  books.txt  movies1.csv.b1.out  movies1.tsv.b1-8.out  movies1.tsv.f1-3.out  movies1.tsv.f1.out  movies2.csv  movies2.tsv
08_findr/: Cargo.toml  mk-outs.sh
08_grepr/: Cargo.toml  mk-outs.sh
09_commr/: Cargo.toml
09_cutr/: Cargo.toml  out.tab
09_findr/: Cargo.toml
09_grepr/: Cargo.toml  mk-outs.sh
10_commr/: Cargo.toml  mk-outs.sh
10_findr/: Cargo.toml
10_grepr/: Cargo.toml  mk-outs.sh
10_tailr/: Cargo.toml
11_fortuner/: Cargo.toml  mk-dat.sh  mk-outs.sh
11_tailr/: Cargo.toml  mk-outs.sh
11_tailr/src/: lib.rs  main.rs
11_tailr/tests/: cli.rs
11_tailr/tests/expected/: all.c+12.out  all.c+3.out  all.c+8.out  all.c12.out  all.c3.out  all.c8.out  all.n+1.out  all.n+3.out  all.n+3.q.out  all.n0.out  all.n1.out  all.n1.q.out  all.n3.out  all.n3.q.out  all.out  one.txt.c3.out  ten.txt.c+2.out  ten.txt.c12.out  ten.txt.n+2.out  three.txt.n+2.out  three.txt.n1.out  twelve.txt.c+2.out  twelve.txt.c12.out  twelve.txt.c8.out  twelve.txt.n+2.out  twelve.txt.n3.out  twelve.txt.n4.out  twelve.txt.out  two.txt.c+2.out  two.txt.c8.out
11_tailr/tests/inputs/: twelve.txt
12_calr/: Cargo.toml  cal.out
12_calr/src/: lib.rs  main.rs
12_calr/tests/: cli.rs
12_calr/tests/expected/: 4-2020.txt
12_fortuner/: Cargo.toml  mk-dat.sh  mk-outs.sh
13_calr/: Cargo.toml  mk-outs.sh
13_lsr/: Cargo.toml  set-test-perms.sh
14_excel2txt/: .gitignore  LICENSE  README.md
14_lsr/: Cargo.toml
14_lsr/src/: lib.rs  main.rs  owner.rs
14_lsr/tests/: cli.rs
14_lsr/tests/inputs/dir/: spiders.txt
14_paster/: Cargo.toml  mk-outs.sh
14_rot13/: Cargo.toml
15_excel2txt/: Cargo.toml
15_excel2txt/src/: lib.rs  main.rs
15_lsr/: Cargo.toml  set-test-perms.sh
15_piggy/: Cargo.toml  mk-outs.sh
15_piggy/src/: lib.rs  main.rs
15_piggy/tests/inputs/: fox.txt.out  nobody.txt  preamble.txt.out
16_change/: Cargo.toml  (+1 more)
18_markov/: Cargo.toml
18_markov/src/: main.rs
18_markov/tests/inputs/: drugs.txt  test.txt
(+540 files in other folders)
