[package]
name = "tailr"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
num = "0.4"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
