[package]
name = "findr"
version = "0.1.0"
edition = "2021"
authors = [ "Ken Youens-Clark <kyclark@gmail.com>" ]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.1.4", features = ["derive"] }
regex = "1.10.2"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"
