[package]
name = "cowsayr"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
# textwrap = { version = "~0.13", features = [ "hyphenation" ] }
textwrap = "~0.13"
