[package]
name = "cutr"
version = "0.1.0"
edition = "2021"
authors = [ "Ken Youens-Clark <kyclark@gmail.com>" ]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"
