[package]
name = "cutr"
version = "0.1.0"
edition = "2021"
authors = [ "Ken Youens-Clark <kyclark@gmail.com>" ]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"
