[package]
name = "calr"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2"
chrono = "0.4"
itertools = "0.10"
colorize = "0.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
