[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.5.0", features = ["derive"] }
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"
