[package]
name = "excel2txt"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
calamine = "0.16.1"
csv = "1.1.3"
regex = "1.3.9"
tempdir = "0.3.7"
