[package]
name = "piggy"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
regex = "~1.4"
unicode-segmentation = "~1.7"
lazy_static = "~1.4"
Inflector = "~0.11"
