[package]
name = "markov"
version = "0.1.0"
authors = ["Ken Youens-Clark <kyclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
# rand = "~0.8"
rand = { version = "~0.8", features = [ "small_rng" ] }
titlecase = "1.0"
regex = "~1.4"
rand_chacha = "~0.3"

[dev-dependencies]
tempfile = "~3.2"
